--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "umomega/media",
 	"description": "Media Scaffold For umΩ Apps",
 	"keywords": ["umomega", "laravel", "media", "php"],
-	"version": "1.0.3",
+	"version": "1.0.4",
 	"license": "MIT",
 	"authors": [
         {
@@ -13,11 +13,11 @@
         }
     ],
     "require": {
-    	"php": "^7.2.5",
+    	"php": "^7.3|^8.0",
         "embed/embed": "^4.0",
         "intervention/image": "^2.5",
         "intervention/imagecache": "^2.4",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^8.0",
         "nyholm/psr7": "^1.2",
         "spatie/laravel-activitylog": "^3.14",
         "spatie/laravel-image-optimizer": "^1.6",
