--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,16 @@
     ],
     "require": {
     	"php": "^7.3|^8.0",
+        "laravel/framework": "^8.0",
         "embed/embed": "^4.0",
         "intervention/image": "^2.5",
         "intervention/imagecache": "^2.4",
-        "laravel/framework": "^8.0",
         "nyholm/psr7": "^1.2",
         "spatie/laravel-activitylog": "^3.14",
         "spatie/laravel-image-optimizer": "^1.6",
         "spatie/laravel-searchable": "^1.5",
-        "spatie/laravel-translatable": "^4.1"
+        "spatie/laravel-translatable": "^4.1",
+        "umomega-foundation": "^1.0"
     },
     "autoload": {
     	"psr-4": {
