--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "umomega/media",
 	"description": "Media Scaffold For umΩ Apps",
 	"keywords": ["umomega", "laravel", "media", "php"],
-	"version": "1.0.5",
+	"version": "1.0.6",
 	"license": "MIT",
 	"authors": [
         {
@@ -23,7 +23,7 @@
         "spatie/laravel-image-optimizer": "^1.6",
         "spatie/laravel-searchable": "^1.5",
         "spatie/laravel-translatable": "^4.1",
-        "umomega-foundation": "^1.0"
+        "umomega/foundation": "^1.0"
     },
     "autoload": {
     	"psr-4": {
