--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "umomega/media",
 	"description": "Media Scaffold For umΩ Apps",
 	"keywords": ["umomega", "laravel", "media", "php"],
-	"version": "1.0.6",
+	"version": "1.0.7",
 	"license": "MIT",
 	"authors": [
         {
@@ -16,6 +16,7 @@
     	"php": "^7.3|^8.0",
         "laravel/framework": "^8.0",
         "embed/embed": "^4.0",
+        "genealabs/laravel-model-caching": "^0.11.1",
         "intervention/image": "^2.5",
         "intervention/imagecache": "^2.4",
         "nyholm/psr7": "^1.2",
